deploy/ci/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: wipp-registry-ingress
spec:
  rules:
  - host: WIPP_REGISTRY_CI_URL
    http:
      paths:
      - backend:
          serviceName: wipp-registry-cluster-ip-service
          servicePort: 8000
        path: /
